--- a/argocd/spring-boot-demo-deployment.yaml
+++ b/argocd/spring-boot-demo-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: spring-boot-demo
     spec:
       containers:
-31
+      - image: ramyvaid/spring-boot-demo:2.0
         name: spring-boot-demo
         ports:
         - containerPort: 8080
