--- a/argocd/spring-boot-demo-deployment.yaml
+++ b/argocd/spring-boot-demo-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: spring-boot-demo
     spec:
       containers:
-      - image: ramyvaid/spring-boot-demo:2.0
+      - image: us.icr.io/dc-tools/spring-boot-demo:33
         name: spring-boot-demo
         ports:
         - containerPort: 8080
